[gd_scene load_steps=3 format=3 uid="uid://7b3fdg50aw5p"]

[ext_resource type="Script" path="res://scripts/ui/general_settings.gd" id="1_i5r8i"]
[ext_resource type="Theme" uid="uid://caaprjqu8fva7" path="res://misc/misc/main_ui_theme.tres" id="2_te83p"]

[node name="GeneralSettings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_te83p")
script = ExtResource("1_i5r8i")

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03, 0, 0, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275521
anchor_top = 0.0453704
anchor_right = 0.724479
anchor_bottom = 0.95463
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="TitleCard" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 44
text = "General Settings"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AllOptions" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WindowOptions" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubtitleCard" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Window"
horizontal_alignment = 1

[node name="Resolution" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions/Resolution"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ResolutionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions/Resolution/HBox"]
layout_mode = 2
text = "Screen Resolution"
horizontal_alignment = 1

[node name="ResolutionOptions" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions/Resolution/HBox" groups=["UI"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "  1920 x 1080"
popup/item_1/text = "  1536 x 864"
popup/item_1/id = 1
popup/item_2/text = "  1366 x 768"
popup/item_2/id = 2
popup/item_3/text = "  1280 x 720"
popup/item_3/id = 3

[node name="Fullscreen" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions/Fullscreen"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="FullscreenLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions/Fullscreen/HBox"]
layout_mode = 2
text = "Fullscreen Enabled"
horizontal_alignment = 1

[node name="FullscreenCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions/Fullscreen/HBox" groups=["UI"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 52)
layout_mode = 2

[node name="GraphicsOptions" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubtitleCard" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Graphics"
horizontal_alignment = 1

[node name="LimitedParticles" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/LimitedParticles"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="LimitedParticlesLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/LimitedParticles/HBox"]
layout_mode = 2
text = "Limited Particles Enabled"
horizontal_alignment = 1

[node name="LimitedParticlesCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/LimitedParticles/HBox" groups=["UI"]]
unique_name_in_owner = true
layout_mode = 2

[node name="Stopwatch" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/Stopwatch"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="StopwatchLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/Stopwatch/HBox"]
layout_mode = 2
text = "Show Stopwatch"
horizontal_alignment = 1

[node name="StopwatchCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/Stopwatch/HBox" groups=["UI"]]
unique_name_in_owner = true
layout_mode = 2

[node name="ShowHealthBars" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ShowHealthBars"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ShowHealthBarsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ShowHealthBars/HBox"]
layout_mode = 2
text = "Show Enemy Healthbars"
horizontal_alignment = 1

[node name="ShowHealthBarsCheckbox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ShowHealthBars/HBox" groups=["UI"]]
unique_name_in_owner = true
layout_mode = 2

[node name="ScreenShake" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ScreenShake"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
alignment = 1

[node name="ScreenShakeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ScreenShake/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Screen Shake Multiplier"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ScreenShake/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Number1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ScreenShake/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0.0x"
horizontal_alignment = 1

[node name="ScreenShakeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ScreenShake/VBoxContainer/HBoxContainer" groups=["UI"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 4
max_value = 2.0
step = 0.1
value = 1.0

[node name="Number2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ScreenShake/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "2.0x"
horizontal_alignment = 1

[node name="AudioOptions" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SubtitleCard" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Audio"
horizontal_alignment = 1

[node name="MasterVolume" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MasterVolume"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
alignment = 1

[node name="MasterVolumeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MasterVolume/VBoxContainer"]
layout_mode = 2
text = "Master Volume
"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MasterVolume/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Number1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MasterVolume/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Mute"
horizontal_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MasterVolume/VBoxContainer/HBoxContainer" groups=["UI"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
value = 0.9

[node name="Number2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MasterVolume/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Max"
horizontal_alignment = 1

[node name="MusicVolume" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MusicVolume"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
alignment = 1

[node name="MusicVolumeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MusicVolume/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MusicVolume/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Number1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MusicVolume/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Mute"
horizontal_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MusicVolume/VBoxContainer/HBoxContainer" groups=["UI"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
value = 0.9

[node name="Number2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MusicVolume/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Max"
horizontal_alignment = 1

[node name="SFXVolume" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions"]
custom_minimum_size = Vector2(0, 52)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/SFXVolume"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
alignment = 1

[node name="SFXVolumeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/SFXVolume/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/SFXVolume/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Number1" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/SFXVolume/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Mute"
horizontal_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/SFXVolume/VBoxContainer/HBoxContainer" groups=["UI"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 4
max_value = 1.0
step = 0.05
value = 0.9

[node name="Number2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/SFXVolume/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Max"
horizontal_alignment = 1

[node name="BottomHBox" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseMenu" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/BottomHBox" groups=["UI"]]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Close Menu"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions/Resolution/HBox/ResolutionOptions" to="." method="_on_resolution_options_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/WindowOptions/Fullscreen/HBox/FullscreenCheckbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/LimitedParticles/HBox/LimitedParticlesCheckbox" to="." method="_on_limited_particles_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/Stopwatch/HBox/StopwatchCheckbox" to="." method="_on_stopwatch_checkbox_toggled"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ShowHealthBars/HBox/ShowHealthBarsCheckbox" to="." method="_on_show_health_bars_checkbox_toggled"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/GraphicsOptions/ScreenShake/VBoxContainer/HBoxContainer/ScreenShakeSlider" to="." method="_on_screen_shake_slider_drag_ended"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MasterVolume/VBoxContainer/HBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_drag_ended"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/MusicVolume/VBoxContainer/HBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_drag_ended"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/AllOptions/AudioOptions/SFXVolume/VBoxContainer/HBoxContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/BottomHBox/CloseMenu" to="." method="_on_close_menu_pressed"]
